# PicoCalc

./: .gitignore  .gitmodules
Code/: README.md
Code/ACOS/: ACOS.ino  Setup21_ILI9488.h  TomThumb.h  i2ckbd.h  i2ckbd.ino  pwm_sound.h  pwm_sound.ino
Code/PicoMite/: PicoMite_002.patch  README.md
Code/pico_multi_booter/: CMakeLists.txt  README.md  applink.py  boot.c  memmap_default_rp2040.ld  memmap_default_rp2350.ld
Code/pico_multi_booter/linker_scripts/: memmap_default.ld.mp.rp2040  memmap_mp_rp2040.ld  rpi-pico.ld
Code/pico_multi_booter/picomite/: CMakeLists.txt  FileIO.c  MM_Misc.c  configuration.h
Code/pico_multi_booter/sd_boot/: CMakeLists.txt  config.h  main.c  text_directory_ui.c  text_directory_ui.h
Code/pico_multi_booter/sd_boot/i2ckbd/: i2ckbd.c  i2ckbd.h
Code/pico_multi_booter/sd_boot/lcdspi/: lcdspi.c
Code/picocalc_helloworld/: main.c
Code/picocalc_helloworld/i2ckbd/: i2ckbd.h
Code/picocalc_keyboard/: keyboard.h  keyboard.ino  picocalc_keyboard.ino  reg.h  reg.ino
Code/uLisp/: README.md
wiki/: Setting-Up-Arduino-Development-for-PicoCalc-keyboard.md
